[gd_scene load_steps=23 format=3 uid="uid://b6egkrxvfwusp"]

[ext_resource type="Script" uid="uid://ghj06urprt1g" path="res://escenas/puzzle_salmon_1.gd" id="1_6r7eb"]
[ext_resource type="Texture2D" uid="uid://dibfv1arx47hn" path="res://assets/sprites/palanca_centro.PNG" id="1_o8y83"]
[ext_resource type="Texture2D" uid="uid://cfqv1dilqxxfc" path="res://assets/sprites/palanca_adorno.PNG" id="2_2xlmw"]
[ext_resource type="Script" uid="uid://dmxojvlt54bha" path="res://escenas/palanca_salmon_1.gd" id="2_k8i5l"]
[ext_resource type="Texture2D" uid="uid://yf1ovbt7adcn" path="res://assets/sprites/base_palanca.PNG" id="3_gegfy"]
[ext_resource type="Texture2D" uid="uid://dt5piqibgkgel" path="res://assets/sprites/rocasucialado.png" id="5_6r7eb"]
[ext_resource type="Texture2D" uid="uid://1ko7mcr6doos" path="res://assets/TILES-TEST/runas-test/runa-test1.png" id="5_gegfy"]
[ext_resource type="Texture2D" uid="uid://355qtqujqaxb" path="res://assets/2d para shader/blanco-shader.jpg" id="6_mkrhh"]
[ext_resource type="Texture2D" uid="uid://ctfsfjhqfytxw" path="res://assets/TILES-TEST/runas-test/runa-test2.png" id="6_t1q3l"]
[ext_resource type="Texture2D" uid="uid://dt8gpftbw4txl" path="res://assets/tile_set/icon.svg" id="7_f0ung"]
[ext_resource type="Texture2D" uid="uid://bjudw1ckt6cac" path="res://assets/TILES-TEST/runas-test/runa-test-4.png" id="7_s1ify"]
[ext_resource type="Texture2D" uid="uid://djh1ycbtamrk" path="res://assets/TILES-TEST/runas-test/runa-test-3.png" id="8_5j0a8"]
[ext_resource type="Script" uid="uid://bfkwa4s1okq2q" path="res://escenas/palanca_salmon_2.gd" id="11_47k4l"]
[ext_resource type="Script" uid="uid://c2uduf8ch2qat" path="res://escenas/palanca_salmon_3.gd" id="12_4e2h8"]

[sub_resource type="Animation" id="Animation_vs360"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PalancaCentro:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.3561945]
}

[sub_resource type="Animation" id="Animation_neg3w"]
resource_name = "activar"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PalancaCentro:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(5.0982437, 0.09807344),
"update": 0,
"values": [-2.3561945, -3.9269907]
}

[sub_resource type="Animation" id="Animation_kfmqc"]
resource_name = "desactivada"

[sub_resource type="Animation" id="Animation_2mypw"]
resource_name = "desactivar"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PalancaCentro:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(5.09, 0.098),
"update": 0,
"values": [-3.9269907, -2.3561945]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2mypw"]
_data = {
&"RESET": SubResource("Animation_vs360"),
&"activar": SubResource("Animation_neg3w"),
&"desactivada": SubResource("Animation_kfmqc"),
&"desactivar": SubResource("Animation_2mypw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtuov"]
size = Vector2(544.4444, 299.11108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_555dy"]
size = Vector2(90, 424)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_555dy"]
polygon = PackedVector2Array(15.321841, -111.97159, 19.353905, -107.558914, 19.75711, -84.94396, 20.563524, -65.08694, 17.337873, -51.848915, 17.74108, -34.19822, 20.563524, -14.341188, 20.563524, 82.18604, 20.160316, 104.24941, 22.17635, 110.31683, 12.902603, 116.38426, -15.725048, 116.38426, -18.950699, 108.1105, -17.337873, 77.22179, -16.53146, 67.84486, -13.305809, 60.122677, -18.144285, 52.400497, -18.144285, -45.229904, -12.902603, -92.666145, -16.128254, -107.558914, -9.2737465, -116.38426, 10.080158, -115.83268)

[node name="PuzzleHolder" type="Node2D"]

[node name="PuzzleSalmon1" type="Node2D" parent="." groups=["controlador_runas"]]
unique_name_in_owner = true
script = ExtResource("1_6r7eb")
runa_1 = ExtResource("6_t1q3l")
runa_2 = ExtResource("5_gegfy")
runa_3 = ExtResource("8_5j0a8")
runa_4 = ExtResource("7_s1ify")
runa_5 = ExtResource("6_mkrhh")
runa_6 = ExtResource("7_f0ung")

[node name="PalancaSalmon1" type="Area2D" parent="PuzzleSalmon1" node_paths=PackedStringArray("sprite_asociado") groups=["palancas"]]
unique_name_in_owner = true
position = Vector2(-573, 176)
scale = Vector2(0.19999999, 0.19999999)
collision_layer = 4
collision_mask = 3
script = ExtResource("2_k8i5l")
sprite_asociado = NodePath("../ContenedorRunas/RunaCambiante1")
id_palanca = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PuzzleSalmon1/PalancaSalmon1"]
libraries = {
&"": SubResource("AnimationLibrary_2mypw")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuzzleSalmon1/PalancaSalmon1"]
position = Vector2(0, -86.55558)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_dtuov")

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="PuzzleSalmon1/PalancaSalmon1"]
event_name = "event:/Objetos/palanca"
event_guid = "{01f69508-e7e5-4bd1-836f-1c8a85eac877}"
fmod_parameters/TipoDePalanca/id = 6086375413492549144
fmod_parameters/TipoDePalanca = "Buen Estado"
fmod_parameters/TipoDePalanca/labels = PackedStringArray("Buen Estado", "Oxidada")
fmod_parameters/TipoDePalanca/variant_type = 4

[node name="PalancaCentro" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon1"]
position = Vector2(0, -25)
rotation = -2.3561945
texture = ExtResource("1_o8y83")
offset = Vector2(1.9, 63.215)

[node name="PalancaAdorno" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon1/PalancaCentro"]
position = Vector2(4.9497633, 146.37112)
rotation = -2.3561945
scale = Vector2(0.70114905, 0.70114905)
texture = ExtResource("2_2xlmw")

[node name="BasePalanca" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon1"]
position = Vector2(1, 2)
texture = ExtResource("3_gegfy")

[node name="TimerPalanca" type="Timer" parent="PuzzleSalmon1/PalancaSalmon1"]

[node name="PuertaSalmon" type="StaticBody2D" parent="PuzzleSalmon1"]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="PuzzleSalmon1/PuertaSalmon"]
unique_name_in_owner = true
modulate = Color(0.63550407, 0.42504865, 0.63550407, 1)
scale = Vector2(3, 3)
texture = ExtResource("5_6r7eb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuzzleSalmon1/PuertaSalmon"]
shape = SubResource("RectangleShape2D_555dy")

[node name="LightOccluder2D" type="LightOccluder2D" parent="PuzzleSalmon1/PuertaSalmon/CollisionShape2D"]
scale = Vector2(2.4801197, 1.8129599)
occluder = SubResource("OccluderPolygon2D_555dy")

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="PuzzleSalmon1/PuertaSalmon"]
event_name = "event:/Objetos/puerta moviendo"
event_guid = "{90f3a533-e150-435d-bc70-f426f47244f3}"
fmod_parameters/Peso/id = 8505785322959852152
fmod_parameters/Peso = 1.0
fmod_parameters/Peso/variant_type = 3

[node name="FmodEventEmitter2D2" type="FmodEventEmitter2D" parent="PuzzleSalmon1/PuertaSalmon"]
event_name = "event:/Objetos/puerta impacto"
event_guid = "{8e09a333-65e9-4f68-87ba-6df0a185aedb}"

[node name="TimerTiempoDeApertura" type="Timer" parent="PuzzleSalmon1/PuertaSalmon"]
one_shot = true

[node name="TimerPuerta" type="Timer" parent="PuzzleSalmon1/PuertaSalmon"]
one_shot = true

[node name="RunaPuerta1" type="Sprite2D" parent="PuzzleSalmon1/PuertaSalmon"]
position = Vector2(1.0000005, -142)
scale = Vector2(0.16601563, 0.16601563)
texture = ExtResource("5_gegfy")

[node name="RunaPuerta2" type="Sprite2D" parent="PuzzleSalmon1/PuertaSalmon"]
position = Vector2(0, -18)
scale = Vector2(0.1640625, 0.1640625)
texture = ExtResource("6_t1q3l")

[node name="RunaPuerta3" type="Sprite2D" parent="PuzzleSalmon1/PuertaSalmon"]
position = Vector2(2.9999943, 136)
scale = Vector2(0.19428572, 0.19428572)
texture = ExtResource("7_s1ify")

[node name="ContenedorRunas" type="Node2D" parent="PuzzleSalmon1"]
unique_name_in_owner = true

[node name="RunaCambiante1" type="Sprite2D" parent="PuzzleSalmon1/ContenedorRunas"]
unique_name_in_owner = true
position = Vector2(-578.0001, -63)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_5j0a8")

[node name="RunaCambiante2" type="Sprite2D" parent="PuzzleSalmon1/ContenedorRunas"]
unique_name_in_owner = true
position = Vector2(-457, -55)
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_s1ify")

[node name="RunaCambiante3" type="Sprite2D" parent="PuzzleSalmon1/ContenedorRunas"]
unique_name_in_owner = true
position = Vector2(-335, -56)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_gegfy")

[node name="PalancaSalmon2" type="Area2D" parent="PuzzleSalmon1" node_paths=PackedStringArray("sprite_asociado") groups=["palancas"]]
unique_name_in_owner = true
position = Vector2(-452, 176)
scale = Vector2(0.19999999, 0.19999999)
collision_layer = 4
collision_mask = 3
script = ExtResource("11_47k4l")
sprite_asociado = NodePath("../ContenedorRunas/RunaCambiante2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PuzzleSalmon1/PalancaSalmon2"]
libraries = {
&"": SubResource("AnimationLibrary_2mypw")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuzzleSalmon1/PalancaSalmon2"]
position = Vector2(0, -86.55558)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_dtuov")

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="PuzzleSalmon1/PalancaSalmon2"]
event_name = "event:/Objetos/palanca"
event_guid = "{01f69508-e7e5-4bd1-836f-1c8a85eac877}"
fmod_parameters/TipoDePalanca/id = 6086375413492549144
fmod_parameters/TipoDePalanca = "Buen Estado"
fmod_parameters/TipoDePalanca/labels = PackedStringArray("Buen Estado", "Oxidada")
fmod_parameters/TipoDePalanca/variant_type = 4

[node name="PalancaCentro" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon2"]
position = Vector2(0, -25)
rotation = -2.3561945
texture = ExtResource("1_o8y83")
offset = Vector2(1.9, 63.215)

[node name="PalancaAdorno" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon2/PalancaCentro"]
position = Vector2(4.9497633, 146.37112)
rotation = -2.3561945
scale = Vector2(0.70114905, 0.70114905)
texture = ExtResource("2_2xlmw")

[node name="BasePalanca" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon2"]
position = Vector2(1, 2)
texture = ExtResource("3_gegfy")

[node name="TimerPalanca" type="Timer" parent="PuzzleSalmon1/PalancaSalmon2"]

[node name="PalancaSalmon3" type="Area2D" parent="PuzzleSalmon1" node_paths=PackedStringArray("sprite_asociado") groups=["palancas"]]
unique_name_in_owner = true
position = Vector2(-331, 176)
scale = Vector2(0.19999999, 0.19999999)
collision_layer = 4
collision_mask = 3
script = ExtResource("12_4e2h8")
sprite_asociado = NodePath("../ContenedorRunas/RunaCambiante3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PuzzleSalmon1/PalancaSalmon3"]
libraries = {
&"": SubResource("AnimationLibrary_2mypw")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuzzleSalmon1/PalancaSalmon3"]
position = Vector2(0, -86.55558)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_dtuov")

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="PuzzleSalmon1/PalancaSalmon3"]
event_name = "event:/Objetos/palanca"
event_guid = "{01f69508-e7e5-4bd1-836f-1c8a85eac877}"
fmod_parameters/TipoDePalanca/id = 6086375413492549144
fmod_parameters/TipoDePalanca = "Buen Estado"
fmod_parameters/TipoDePalanca/labels = PackedStringArray("Buen Estado", "Oxidada")
fmod_parameters/TipoDePalanca/variant_type = 4

[node name="PalancaCentro" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon3"]
position = Vector2(0, -25)
rotation = -2.3561945
texture = ExtResource("1_o8y83")
offset = Vector2(1.9, 63.215)

[node name="PalancaAdorno" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon3/PalancaCentro"]
position = Vector2(4.9497633, 146.37112)
rotation = -2.3561945
scale = Vector2(0.70114905, 0.70114905)
texture = ExtResource("2_2xlmw")

[node name="BasePalanca" type="Sprite2D" parent="PuzzleSalmon1/PalancaSalmon3"]
position = Vector2(1, 2)
texture = ExtResource("3_gegfy")

[node name="TimerPalanca" type="Timer" parent="PuzzleSalmon1/PalancaSalmon3"]

[connection signal="activar_cambiar_runa" from="PuzzleSalmon1/PalancaSalmon1" to="PuzzleSalmon1" method="_on_palanca_salmon_1_activar_cambiar_runa"]
[connection signal="body_entered" from="PuzzleSalmon1/PalancaSalmon1" to="PuzzleSalmon1/PalancaSalmon1" method="_on_body_entered"]
[connection signal="body_exited" from="PuzzleSalmon1/PalancaSalmon1" to="PuzzleSalmon1/PalancaSalmon1" method="_on_body_exited"]
[connection signal="timeout" from="PuzzleSalmon1/PalancaSalmon1/TimerPalanca" to="PuzzleSalmon1/PalancaSalmon1" method="_on_timer_palanca_timeout"]
[connection signal="timeout" from="PuzzleSalmon1/PuertaSalmon/TimerTiempoDeApertura" to="PuzzleSalmon1/PuertaSalmon" method="_on_timer_tiempo_de_apertura_timeout"]
[connection signal="timeout" from="PuzzleSalmon1/PuertaSalmon/TimerPuerta" to="PuzzleSalmon1/PuertaSalmon" method="_on_timer_puerta_timeout"]
[connection signal="activar_cambiar_runa" from="PuzzleSalmon1/PalancaSalmon2" to="PuzzleSalmon1" method="_on_palanca_salmon_2_activar_cambiar_runa"]
[connection signal="body_entered" from="PuzzleSalmon1/PalancaSalmon2" to="PuzzleSalmon1/PalancaSalmon2" method="_on_body_entered"]
[connection signal="body_exited" from="PuzzleSalmon1/PalancaSalmon2" to="PuzzleSalmon1/PalancaSalmon2" method="_on_body_exited"]
[connection signal="timeout" from="PuzzleSalmon1/PalancaSalmon2/TimerPalanca" to="PuzzleSalmon1/PalancaSalmon2" method="_on_timer_palanca_timeout"]
[connection signal="activar_cambiar_runa" from="PuzzleSalmon1/PalancaSalmon3" to="PuzzleSalmon1" method="_on_palanca_salmon_3_activar_cambiar_runa"]
[connection signal="body_entered" from="PuzzleSalmon1/PalancaSalmon3" to="PuzzleSalmon1/PalancaSalmon3" method="_on_body_entered"]
[connection signal="body_exited" from="PuzzleSalmon1/PalancaSalmon3" to="PuzzleSalmon1/PalancaSalmon3" method="_on_body_exited"]
[connection signal="timeout" from="PuzzleSalmon1/PalancaSalmon3/TimerPalanca" to="PuzzleSalmon1/PalancaSalmon3" method="_on_timer_palanca_timeout"]
